# vscode-agent-template

./: .env.example  .gitignore  LICENSE  README.md  litellm.config.yaml
.cline/: rules.md
agents/: autocomplete.md  co-lead.md  code-gen.md  continue-config.json  head-dev.md  long-runner.md  quick-shell.md
mcp/: config.json
mcp/servers/trading-journal/: README.md  pyproject.toml
mcp/servers/trading-journal/trading_journal/: __init__.py  config.py  db.py  embed.py  server.py  vault.py
profiles/neurotrader/: CLAUDE.md.append  post-install.sh
profiles/neurotrader/agents/: code-gen.md  head-dev.md
profiles/neurotrader/commands/: audit-ghost-code.md  check-trades.md  journal.md  run-cycle.md
profiles/neurotrader/mcp/: config.append.json
scripts/: litellm-up.sh  ollama-startup.sh  setup.sh
